// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amberdata when making a request to balance endpoint should reply with success 1`] = `
{
  "data": {
    "result": [
      {
        "address": "3EyjZ6CtEZEKyc719NZMyWaJpJG5jsVJL1",
        "balance": "0",
        "chain": "mainnet",
        "coin": "btc",
      },
      {
        "address": "38bzm6nhQMFJe71jJw1U7CbgNrVNpkonZF",
        "balance": "2188",
        "chain": "mainnet",
        "coin": "btc",
      },
    ],
  },
  "jobRunID": "1",
  "result": [
    {
      "address": "3EyjZ6CtEZEKyc719NZMyWaJpJG5jsVJL1",
      "balance": "0",
      "chain": "mainnet",
      "coin": "btc",
    },
    {
      "address": "38bzm6nhQMFJe71jJw1U7CbgNrVNpkonZF",
      "balance": "2188",
      "chain": "mainnet",
      "coin": "btc",
    },
  ],
  "statusCode": 200,
}
`;

exports[`amberdata when making a request to crypto endpoint should reply with success 1`] = `
{
  "data": {
    "result": 0.06567038,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 0.06567038,
  "statusCode": 200,
}
`;

exports[`amberdata when making a request to crypto endpoint with an override from config/overrides.json should reply with success 1`] = `
{
  "data": {
    "result": 0.0000586300395535625,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 0.0000586300395535625,
  "statusCode": 200,
}
`;

exports[`amberdata when making a request to marketcap endpoint should reply with success 1`] = `
{
  "data": {
    "result": 391118025366,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 391118025366,
  "statusCode": 200,
}
`;

exports[`amberdata when making a request to volume endpoint should reply with success 1`] = `
{
  "data": {
    "result": 13804511.82541564,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 13804511.82541564,
  "statusCode": 200,
}
`;
